plugins {
    id 'java-library'
    id 'maven-publish'
    id 'signing'
    id 'idea'
    id 'net.researchgate.release' version '3.1.0'
}

group = 'io.github.crramirez'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
    withSourcesJar()
    withJavadocJar()
}

idea {
    module {
        downloadSources = true
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Casciian core (consumed from Maven Central so this module can live
    // independently and eventually be extracted to its own repository).
    api "io.github.crramirez:casciian:${casciianVersion}"

    // Spring Boot auto-configuration support. Using the dependencies BOM so
    // transitive versions are aligned with whatever Boot version the consumer
    // uses.
    implementation platform("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
    annotationProcessor platform("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
    implementation 'org.springframework.boot:spring-boot-autoconfigure'
    implementation 'org.springframework.boot:spring-boot'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

    // Embedded SSH server.
    implementation "org.apache.sshd:sshd-core:${sshdVersion}"

    testImplementation platform("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
    testImplementation 'org.springframework.boot:spring-boot-test'
    testImplementation 'org.springframework.boot:spring-boot-test-autoconfigure'
    testImplementation platform('org.junit:junit-bom:5.11.4')
    testImplementation 'org.junit.jupiter:junit-jupiter-api'
    testImplementation 'org.junit.jupiter:junit-jupiter-params'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.assertj:assertj-core:3.27.7'
    testImplementation 'org.mockito:mockito-core:5.14.2'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.14.2'
}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
        exceptionFormat = "full"
        showStandardStreams = false
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs += ['-Xlint:all', '-Xlint:-processing', '-Xlint:-serial']
}

tasks.jar {
    manifest {
        attributes(
                'Implementation-Title': 'casciian-spring-boot-starter',
                'Implementation-Version': project.version
        )
    }
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java

            pom {
                name = 'casciian-spring-boot-starter'
                description = 'Spring Boot auto-configuration that exposes a Casciian TUI over SSH.'
                url = 'https://github.com/crramirez/casciian'

                licenses {
                    license {
                        name = 'Apache License, Version 2.0'
                        url = 'https://www.apache.org/licenses/LICENSE-2.0'
                        distribution = 'repo'
                    }
                }
                developers {
                    developer {
                        id = 'crramirez'
                        name = 'crramirez'
                        url = 'https://github.com/crramirez'
                    }
                }
                scm {
                    url = 'https://github.com/crramirez/casciian'
                    connection = 'scm:git:https://github.com/crramirez/casciian.git'
                    developerConnection = 'scm:git:ssh://git@github.com/crramirez/casciian.git'
                }
            }
        }
    }
    repositories {
        maven {
            name = "localStaging"
            url = layout.buildDirectory.dir("staging-repo")
        }
    }
}

def signingKeyId = (findProperty("signingKeyId") ?: System.getenv("SIGNING_KEY_ID"))?.toString()
def signingKeyB64 = (findProperty("signingKeyB64") ?: System.getenv("SIGNING_KEY_B64"))?.toString()
def signingPassword = (findProperty("signingPassword") ?: System.getenv("SIGNING_PASSWORD"))?.toString()

def signingKey = null
if (signingKeyB64) {
    signingKey = new String(Base64.decoder.decode(signingKeyB64), "UTF-8")
}

signing {
    if (signingKeyId && signingKey && signingPassword) {
        useInMemoryPgpKeys(signingKeyId, signingKey, signingPassword)
        sign publishing.publications
    }
}

tasks.register('publishToLocalStaging') {
    group = 'publishing'
    description = 'Publishes signed artifacts to build/staging-repo (for Central Portal bundling).'
    dependsOn(
            'publishMavenJavaPublicationToLocalStagingRepository'
    )
}

tasks.register('centralBundleZip', Zip) {
    group = 'publishing'
    description = 'Creates a Maven-layout ZIP bundle for Sonatype Central Portal upload.'
    dependsOn('publishToLocalStaging')

    from(layout.buildDirectory.dir("staging-repo"))
    archiveBaseName.set("casciian-central")
    archiveVersion.set(project.version.toString())
    destinationDirectory.set(layout.buildDirectory.dir("central-bundle"))

    // Result: build/central-bundle/casciian-central-<version>.zip
}

tasks.javadoc {
    options.memberLevel = JavadocMemberLevel.PROTECTED
    options.author = true
    options.version = true
    options.links('https://docs.oracle.com/en/java/javase/21/docs/api/')
    // The starter's public API is small; be lenient about missing doc comments
    // on the non-public internals.
    options.addStringOption('Xdoclint:none', '-quiet')
}

release {
    preTagCommitMessage = '[release] prepare release '
    tagCommitMessage = '[release] '
    newVersionCommitMessage = '[release] prepare next '
    tagTemplate = 'v${version}'
}

tasks.named('afterReleaseBuild') {
    dependsOn 'jar', 'publishToLocalStaging', 'centralBundleZip'
}
